# bank_lead_scoring

./: .gitignore  DASHBOARD_README.md  ELT.py  Makefile  README.md  dashboard.py  evaluate_models.py  explainability.py  fallback_rules.py  feature_engineering.py  pyproject.toml  requirements-dev.txt  requirements.txt  score_batch.py  train_models.py  validation.py
app/: streamlit_app.py
bank_lead_scoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
conf/: rules.yaml  settings.yaml
configs/: config.yaml  dashboard_config.yaml  model_config.yaml  scenario_config.yaml
dbt/: .user.yml  dbt_project.yml
docker/: docker-compose.yml  docker-compose.yml.bak
docs/: architecture.md  github_checklist.md  installation.md  methodology.md  results_summary.md
models/: cltv_model.pkl  cltv_regressor_features.json  cltv_regressor_lgbm.pkl  high_cltv_features.json  high_cltv_hgb_cal.pkl  high_cltv_hgb_features.json  lgbm_leads_v2_V2_CORE.joblib  lgbm_reg.pkl  model_metadata.json  model_select_results.txt  propensity_model.pkl  unified_lgbm_cls.pkl  unified_lgbm_features.json
reports/: aa_impact_summary.txt  cltv_eval.json  lgbm_leads_v2_V2_CORE_metrics.json  model_eval.json  model_select.json  model_select_unified.json  project_audit.md  qc_summary_20251110_134752.json
scripts/: __init__.py  create_customer_profile_view.py  repo_health_check.py  run_export_web_data.py  run_pipeline.py  run_project_audit.py
tests/: conftest.py  test_data_contracts.py  test_metrics.py  test_model_comparison.py  test_scoring.py  test_web_exporter.py
web/: README.md  package-lock.json  (+2 more)
(+207 files in other folders)
